--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@iconify-json/mdi": "^1.1.67",
+		"@iconify/json": "^2.2.223",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -32,6 +34,7 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
+		"unplugin-icons": "^0.19.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
