--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.5.0",
 		"@iconify-json/mdi": "^1.1.67",
 		"@iconify/json": "^2.2.223",
 		"@playwright/test": "^1.28.1",
@@ -22,7 +23,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
-		"eslint": "^9.0.0",
+		"@types/eslint__js": "^8.42.3",
+		"eslint": "^9.5.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
@@ -32,8 +34,8 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.0.0-alpha.20",
+		"typescript": "^5.5.2",
+		"typescript-eslint": "8.0.0-alpha.34",
 		"unplugin-icons": "^0.19.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
