--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.7",
 		"@types/eslint__js": "^8.42.3",
+		"date-picker-svelte": "^2.13.0",
 		"eslint": "^9.5.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
