--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"type": "module",
 	"dependencies": {
 		"dayjs": "^1.11.11",
-		"firebase": "^10.12.2"
+		"firebase": "^10.12.2",
+		"firebase-admin": "^12.2.0"
 	}
 }
