--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 		"@playwright/test": "^1.45.1",
 		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/kit": "^2.5.18",
-		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/eslint": "^8.56.10",
 		"@types/eslint__js": "^8.42.3",
 		"date-picker-svelte": "^2.13.0",
@@ -39,10 +38,12 @@
 		"typescript-eslint": "8.0.0-alpha.34",
 		"unplugin-icons": "^0.19.0",
 		"vite": "^5.3.3",
-		"vitest": "^1.6.0"
+		"vitest": "^1.6.0",
+		"vite-plugin-checker": "^0.7.1"
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/jsonwebtoken": "^9.0.6",
 		"dayjs": "^1.11.11",
 		"firebase": "^10.12.3",
