--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/kit": "^2.5.18",
 		"@types/eslint": "^8.56.10",
 		"@types/eslint__js": "^8.42.3",
+		"@types/uuid": "^10.0.0",
 		"date-picker-svelte": "^2.13.0",
 		"eslint": "^9.6.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -38,8 +39,8 @@
 		"typescript-eslint": "8.0.0-alpha.34",
 		"unplugin-icons": "^0.19.0",
 		"vite": "^5.3.3",
-		"vitest": "^1.6.0",
-		"vite-plugin-checker": "^0.7.1"
+		"vite-plugin-checker": "^0.7.1",
+		"vitest": "^1.6.0"
 	},
 	"type": "module",
 	"dependencies": {
@@ -48,6 +49,7 @@
 		"dayjs": "^1.11.11",
 		"firebase": "^10.12.3",
 		"firebase-admin": "^12.2.0",
-		"jsonwebtoken": "^9.0.2"
+		"jsonwebtoken": "^9.0.2",
+		"uuid": "^10.0.0"
 	}
 }
