--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
 		"@types/jsonwebtoken": "^9.0.6",
 		"dayjs": "^1.11.11",
+		"dotenv": "^16.4.5",
 		"drizzle-orm": "^0.32.0",
 		"firebase": "^10.12.3",
 		"firebase-admin": "^12.2.0",
